working users controller

--- a/ProfileMatch.Sites/Admin/Dashboard.razor
+++ b/ProfileMatch.Sites/Admin/Dashboard.razor
@@ -1,6 +1,6 @@
 ﻿@page "/admin/dashboard"
 
-<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Admin Dashboard</MudText>
+@*<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Admin Dashboard</MudText>
 <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
     <MudTabPanel Text="Users">
         <AdminPeopleListComponent />
@@ -39,4 +39,4 @@
     <MudTabPanel Text="Departments"></MudTabPanel>
     <MudTabPanel Text="Questions"></MudTabPanel>
     <MudTabPanel Text="Categories"></MudTabPanel>
-</MudTabs>
+</MudTabs>*@
