--- a/ProfileMatch.Sites/Admin/EditUser.razor
+++ b/ProfileMatch.Sites/Admin/EditUser.razor
@@ -1,4 +1,4 @@
-﻿@page "/admin/edituser/{id}"
+﻿@*@page "/admin/edituser/{id}"
 @page "/admin/edituser"
 
 
@@ -51,4 +51,4 @@ else
         </MudForm>
         <MudButton OnClick="@HandleSave">Save</MudButton>
     </MudContainer>
-}
+}*@
