--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -1,6 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
 @using ProfileMatch.Models
+@using ProfileMatch.Models.Models
+@using ProfileMatch.Models.Profiles
+@using ProfileMatch.Models.ViewModels
 @using ProfileMatch.Components
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
@@ -12,3 +15,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ProfileMatch
+@using ProfileMatch.Components.Culture
+@using ProfileMatch.Components.Layout
+@using ProfileMatch.Components.Theme
+@using Microsoft.Extensions.Localization
