--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -8,6 +8,10 @@
 @using Microsoft.JSInterop
 @using ProfileMatch
 @using ProfileMatch.Components
+@using ProfileMatch.Components.Culture
+@using ProfileMatch.Components.Layout
+@using ProfileMatch.Components.Theme
+
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
 @using ProfileMatch.Sites
