added people list component

--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -1,1 +1,18 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using System.Net.Http
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+@using ProfileMatch
+@using ProfileMatch.Components
+@using ProfileMatch.Components.Culture
+@using ProfileMatch.Components.Layout
+@using ProfileMatch.Components.Theme
+
+@using ProfileMatch.Services
+@using ProfileMatch.Contracts
+@using ProfileMatch.Sites
+@using MudBlazor
