using ProfileMatch.Components.Admin

--- a/ProfileMatch.Sites/Admin/Dashboard.razor
+++ b/ProfileMatch.Sites/Admin/Dashboard.razor
@@ -3,7 +3,7 @@
 <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Admin Dashboard</MudText>
 <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
     <MudTabPanel Text="Users">
-        <AdminPeopleListComponent />
+        <PeopleList />
     </MudTabPanel>
     <MudTabPanel Text="Statistics" Icon="@Icons.Material.Filled.Portrait">
         <MudGrid>
