--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -11,6 +11,7 @@
 @using ProfileMatch.Components.Culture
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
+@using ProfileMatch.Components.Admin
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
