--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -19,3 +19,4 @@
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
 @using Microsoft.Extensions.Localization
+@using ProfileMatch.Models.Enumerations
