--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -7,6 +7,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ProfileMatch
+@using ProfileMatch.Models
+@using ProfileMatch.Models.Profiles
+@using ProfileMatch.Models.Enumerations
+@using ProfileMatch.Models.ViewModels
+
 @using ProfileMatch.Components
 @using ProfileMatch.Components.Culture
 @using ProfileMatch.Components.Layout
