added stubbs: departments list and questions list with code behind

--- a/ProfileMatch.Components/Admin/PeopleList.razor
+++ b/ProfileMatch.Components/Admin/PeopleList.razor
@@ -15,12 +15,12 @@ else
             <MudTextField @bind-Value="SearchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel="Department" T="ApplicationUser">Department</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<EditUserVM, object>(x=>x.Department.Name)" SortLabel="Department" T="EditUserVM">Department</MudTableSortLabel></MudTh>
             <MudTh>Photo</MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.FirstName)" SortLabel="First Name" T="ApplicationUser">First Name</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel="Last Name" T="ApplicationUser">Last Name</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth)" SortLabel="Date Of Birth" T="ApplicationUser">Birth Date</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel="Is Active" T="ApplicationUser">Is Deleted</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<EditUserVM, object>(x=>x.FirstName)" SortLabel="First Name" T="EditUserVM">First Name</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<EditUserVM, object>(x=>x.LastName)" SortLabel="Last Name" T="EditUserVM">Last Name</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<EditUserVM, object>(x=>x.DateOfBirth)" SortLabel="Date Of Birth" T="EditUserVM">Birth Date</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<EditUserVM, object>(x=>x.IsActive)" SortLabel="Is Active" T="EditUserVM">Is Active</MudTableSortLabel></MudTh>
             <MudTh><MudSwitch @bind-Checked="@disabled" Color="Color.Secondary">Edit</MudSwitch></MudTh>
             <MudTh>Profile</MudTh>
         </HeaderContent>
