added Component stubs

--- a/ProfileMatch.Sites/Admin/Dashboard.razor
+++ b/ProfileMatch.Sites/Admin/Dashboard.razor
@@ -36,7 +36,7 @@
             </MudItem>
         </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Departments"></MudTabPanel>
+    <MudTabPanel Text="Departments"><DepartmentsList/></MudTabPanel>
     <MudTabPanel Text="Questions"></MudTabPanel>
     <MudTabPanel Text="Categories"></MudTabPanel>
 </MudTabs>
