--- a/ProfileMatch.Components/Admin/DepartmentsList.razor
+++ b/ProfileMatch.Components/Admin/DepartmentsList.razor
@@ -1,5 +1,12 @@
-﻿<MudText>List of Departments</MudText>
-<MudTable Items="@FilledDepartments" Hover="true" Breakpoint="Breakpoint.Sm">
+﻿
+@if (Departments == null)
+{
+    <p>Loading</p>
+}
+else
+{
+<MudText>List of Departments</MudText>
+<MudTable Items="@Departments" Hover="true" Breakpoint="Breakpoint.Sm">
     <ColGroup>
         <col />
         <col />
@@ -23,7 +30,7 @@
                             </CardHeaderContent>
                         </MudCardHeader>
                         <MudCardContent Class="pa-0">
-                            <MudTable Items="@context.Users" Context="Person" Hover="true" Breakpoint="Breakpoint.Sm" Elevation="0">
+                            <MudTable Items="@context.ApplicationUsers" Context="Person" Hover="true" Breakpoint="Breakpoint.Sm" Elevation="0">
                                 <ColGroup>
                                     <col />
                                     <col />
@@ -33,8 +40,8 @@
                                     <MudTh>Last Name</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
-                                    <MudTd DataLabel="First Name">@Person.FirstName</MudTd>
-                                    <MudTd DataLabel="Last Name">@Person.LastName</MudTd>
+                                    <MudTd DataLabel="First Name">@Person.Email</MudTd>
+                                    <MudTd DataLabel="Last Name">@Person.Id</MudTd>
                                 </RowTemplate>
                             </MudTable>
                         </MudCardContent>
@@ -44,3 +51,4 @@
         
     </ChildRowContent>
 </MudTable>
+}
