updated category repository

--- a/ProfileMatch.Components/Admin/QuestionsList.razor
+++ b/ProfileMatch.Components/Admin/QuestionsList.razor
@@ -1,6 +1,6 @@
 ﻿@page "/categoriestable"
-@inject ICategoryRepository categoryRepository
-@inject IQuestionRepository questionRepository
+@inject ICategoryService categoryService
+@inject IQuestionService questionService
 @inject IAnswerOptionRepository answerOptionRepository
 
 @if (loading)
@@ -52,71 +52,8 @@ else
         <MudSwitch @bind-Checked="@bordered" Color="Color.Warning">Bordered</MudSwitch>
         <MudSpacer />
         <MudItem style="min-width:200px;">
-            <MudText Inline="true" Class="align-self-center">Selected1: @selectedItem1?.Title</MudText>
+            <MudText Inline="true" Class="align-self-center">Selected1: @selectedItem1?.Name</MudText>
         </MudItem>
     </MudItem>
 }
-@code{
-    bool loading;
-    [Parameter] public int id { get; set; }
-    IEnumerable<Question> questions;
-    IEnumerable<Question> questions1;
-    IEnumerable<Category> categories;
-    private HashSet<string> options { get; set; } = new HashSet<string>() { };
-    private string value { get; set; } = "Nothing selected";
-    public bool ShowDetails { get; set; }
-    protected override async Task OnInitializedAsync()
-    {
-        loading = true;
-        categories = await categoryRepository.GetCategories();
-        questions = await questionRepository.GetQuestionsWithCategories();
-        questions1 = questions;
-        loading = false;
-    }
-    bool dense = true;
-    bool hover = true;
-    bool bordered = true;
-    bool striped = false;
-    private string searchString1 = "";
-    private Question selectedItem1 = null;
-    private HashSet<Question> selectedItems = new HashSet<Question>();
-    private bool FilterFunc1(Question question) => FilterFunc(question, searchString1);
 
-    private bool FilterFunc(Question question, string searchString)
-    {
-        if (string.IsNullOrWhiteSpace(searchString))
-            return true;
-        if (question.Category.Name.Contains(searchString, StringComparison.OrdinalIgnoreCase))
-            return true;
-        if (question.Name.Contains(searchString, StringComparison.OrdinalIgnoreCase))
-            return true;
-        return false;
-    }
-    IEnumerable<Question> GetQuestions()
-    {
-        if (options.Count() == 0)
-        {
-            questions1 = questions;
-        }
-        else
-        {
-
-
-            questions1 = from q in questions
-                         from o in options
-                         where q.Category.Name == o
-                         select q;
-        }
-        //return questions1;
-    }
-    IEnumerable<Category> GetCategories()
-    {
-
-        questions1 = questions.GroupBy(x => x.Category.Name).Select(y => y.First()).Distinct();
-        categories = from q in questions1
-                     where q.Category.Name != null
-                     select q.Category;
-
-        return categories;
-    }
-}
