--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -2,8 +2,7 @@
 @using MudBlazor
 @using ProfileMatch.Models
 @using ProfileMatch.Models.Models
-@using ProfileMatch.Models.Profiles
-@using ProfileMatch.Models.ViewModels
+
 @using ProfileMatch.Components
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
@@ -20,3 +19,4 @@
 @using ProfileMatch.Components.Theme
 @using Microsoft.Extensions.Localization
 @using ProfileMatch.Models.Enumerations
+@using Microsoft.AspNetCore.Identity
