--- a/ProfileMatch.Components/Authentication/Register.razor
+++ b/ProfileMatch.Components/Authentication/Register.razor
@@ -23,7 +23,7 @@
     bool PasswordVisibility;
     InputType PasswordInput = InputType.Password;
     string PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
-    private RegisterVM registerFormModel = new();
+    private Register registerFormModel = new();
     void TogglePasswordVisibility()
     {
         @if (PasswordVisibility)
