--- a/ProfileMatch.Sites/Admin/EditUser.razor
+++ b/ProfileMatch.Sites/Admin/EditUser.razor
@@ -2,15 +2,16 @@
 @page "/admin/edituser"
 
 
-@if (EditUserVM == null || Departments == null)
+@if (EditUser == null || Departments == null|| currentUser==null)
 {
     <p>loading</p>
 }
 else
 {
+    <p>Editor: <br />@currentUserName</p>
     <MudContainer>
         <MudForm @ref="Form" @bind-IsValid="@_success">
-            <MudSelect @bind-Value="@EditUserVM.DepartmentId"
+            <MudSelect @bind-Value="@EditUser.DepartmentId"
                        T="int"
                        OffsetY="true"
                        CloseIcon="@Icons.Material.Filled.LocationCity"
@@ -21,17 +22,17 @@ else
                     <MudSelectItem Value="@(dept.Id)">@dept.Name</MudSelectItem>
                 }
             </MudSelect>
-            <MudSwitch @bind-Checked="@EditUserVM.IsActive"
+            <MudSwitch @bind-Checked="@EditUser.IsActive"
                        T="bool"
                        Label="Is Active?"
                        Color="Color.Success" />
-            <MudTextField T="string" @bind-Value="@EditUserVM.FirstName" Immediate="true" Label="First Name"
+            <MudTextField T="string" @bind-Value="@EditUser.FirstName" Immediate="true" Label="First Name"
                           Required="true" RequiredError="Person name is required!" />
-            <MudTextField T="string" @bind-Value="@EditUserVM.LastName" Immediate="true" Label="Last Name" Required="true" RequiredError="Person name is required!" />
-            <MudTextField T="string" Label="Email" @bind-Value="@EditUserVM.Email" Required="true" RequiredError="Email is required!"/>
+            <MudTextField T="string" @bind-Value="@EditUser.LastName" Immediate="true" Label="Last Name" Required="true" RequiredError="Person name is required!" />
+            <MudTextField T="string" Label="Email" @bind-Value="@EditUser.Email" Required="true" RequiredError="Email is required!"/>
                           
-            <MudTextField T="string" @bind-Value="@EditUserVM.ConfirmEmail" Immediate="true" Label="Confirm Email" Required="true" RequiredError="Person name is required!" />
-            <MudSelect T="Gender?" Label="Select Gender" @bind-Value="@EditUserVM.Gender"
+            <MudTextField T="string" @bind-Value="@EditUser.ConfirmEmail" Immediate="true" Label="Confirm Email" Required="true" RequiredError="Person name is required!" />
+            <MudSelect T="Gender?" Label="Select Gender" @bind-Value="@EditUser.Gender"
                        OffsetY="true"
                        CloseIcon="@Icons.Material.Filled.LocationCity"
                        HelperText="Select Gender"
