--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<UserCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
 <MudDivider Class="mb-4" />
-<MudNaenu>
+<MudNavMenu>
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
     <MudNavLink Href="personal/account" Icon="@Icons.Material.Outlined.Person">My Account</MudNavLink>
     <MudNavLink Href="personal/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
@@ -16,4 +16,4 @@
     <MudNavLink Href="admin/surveymanager" Icon="@Icons.Filled.Category">Admin Survey</MudNavLink>
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">SU</MudText>
     <MudNavLink Href="su/dashboard" Icon="@Icons.Filled.Dangerous">Red Zone</MudNavLink>
-</MudNaenu>
+</MudNavMenu>
